converter/test/k8scvt/testdata/sso-test.yaml
---
# Source: casso/templates/service-admin.yaml
## Admin Service
kind: Service
apiVersion: v1
metadata:
  name: jolly-tuatara-casso-admin
  namespace: prod
  annotations:
    description: "Service for the Admin Server"
  labels:
    app: jolly-tuatara-casso
    chart: casso-14.00.00
    heritage: Tiller
    release: jolly-tuatara
spec:
  type: ClusterIP
  ports:
  - name: adminuihttp
    port: 8080
    targetPort: 8080
  - name: adminuihttps
    port: 8443
    targetPort: 8443
  - name: proxyuihttp
    port: 9080
    targetPort: 9080
  - name: proxyuihttps
    port: 9443
    targetPort: 9443
  selector:
      app: jolly-tuatara-casso
      release: jolly-tuatara
      ca.com/sso-pod: admin
      ca.com/sso-role: admin
---
# Source: casso/templates/service-ag-worker.yaml
# Access Gateway Worker Service
kind: Service
apiVersion: v1
metadata:
  name: jolly-tuatara-casso-ag-worker
  namespace: prod
  annotations:
    description: "Service for the Access Gateway Worker"
  labels:
    app: jolly-tuatara-casso
    chart: casso-14.00.00
    heritage: Tiller
    release: jolly-tuatara
spec:
  type: NodePort
  ports:
  - name: http
    port: 6080
    nodePort: 31090
    targetPort: 6080
  - name: https
    port: 6443
    nodePort: 31353
    targetPort: 6443
  - name: proxyhttp
    port: 9080
    nodePort: 32080
    targetPort: 7080
  - name: proxyhttps
    port: 9443
    nodePort: 32443
    targetPort: 7443
  selector:
      app: jolly-tuatara-casso
      release: jolly-tuatara
      ca.com/sso-pod: access-gateway
      ca.com/sso-role: worker
---
# Source: casso/templates/service-policy-store.yaml
# Policy Store Service
kind: Service
apiVersion: v1
metadata:
  name: jolly-tuatara-casso-policy-store
  namespace: prod
  annotations:
    description: "Service for the Embedded Policy Store"
  labels:
    app: jolly-tuatara-casso
    chart: casso-14.00.00
    heritage: Tiller
    release: jolly-tuatara
spec:
  type: ClusterIP
  ports:
  - name: ldap
    port: 10389
    targetPort: 10389
  # Only create the selector for embedded Policy Store service
  # For an external Policy Store service, we create an
  # external endpoint instead so don't want to create the selector
  selector:
      app: jolly-tuatara-casso
      release: jolly-tuatara
      ca.com/sso-pod: admin
      ca.com/sso-role: admin
---
# Source: casso/templates/service-ps-worker.yaml
## Worker Policy Server Service
kind: Service
apiVersion: v1
metadata:
  name: jolly-tuatara-casso-ps-worker
  namespace: prod
  annotations:
    description: "Service for the Worker Policy Server"
  labels:
    app: jolly-tuatara-casso
    chart: casso-14.00.00
    heritage: Tiller
    release: jolly-tuatara
spec:
  type: NodePort
  ports:
  - name: accnt
    port: 44441
    nodePort: 31341
    targetPort: 44441
  - name: authn
    port: 44442
    nodePort: 31342
    targetPort: 44442
  - name: az
    port: 44443
    nodePort: 31343
    targetPort: 44443
  selector:
      app: jolly-tuatara-casso
      release: jolly-tuatara
      ca.com/sso-pod: policy-server
      ca.com/sso-role: worker
---
# Source: casso/templates/statefulset-admin.yaml
## Admin Server StatefulSet (includes Admin Policy Server, Admin UI Policy Store and Acces Gateway UI containers in the pod)
## StatefulSet requires a headless service
kind: Service
apiVersion: v1
metadata:
  name: jolly-tuatara-casso-admin-headless
  labels:
    # The "heritage" label is used to track which tool deployed a given chart.
    # It is useful for admins who want to see what releases a particular tool
    # is responsible for.
    heritage: Tiller
    # The "release" convention makes it easy to tie a release to all of the
    # Kubernetes resources that were created as part of that release.
    release: jolly-tuatara
    # This makes it easy to audit chart usage.
    chart: casso-14.00.00
    app: jolly-tuatara-casso
spec:
  ports:
  - name: admin
    port: 80
  - name: ssh
    port: 222
  clusterIP: None
  selector:
    app: jolly-tuatara-casso
    release: jolly-tuatara
    ca.com/sso-pod: admin
    ca.com/sso-role: admin
---
# Source: casso/templates/deployment-ag-worker.yaml
## Worker Access Gateway Deployment (includes Access Gateway Worker container in the pod)
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: jolly-tuatara-casso-ag-worker
  namespace: prod
  labels:
    # The "heritage" label is used to track which tool deployed a given chart.
    # It is useful for admins who want to see what releases a particular tool
    # is responsible for.
    heritage: Tiller
    # The "release" convention makes it easy to tie a release to all of the
    # Kubernetes resources that were created as part of that release.
    release: jolly-tuatara
    # This makes it easy to audit chart usage.
    chart: casso-14.00.00
    app: jolly-tuatara-casso
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jolly-tuatara-casso
      release: jolly-tuatara
      ca.com/sso-pod: access-gateway
      ca.com/sso-role: worker
  template:
    metadata:
      labels:
        app: jolly-tuatara-casso
        release: jolly-tuatara
        ca.com/sso-pod: access-gateway
        ca.com/sso-role: worker
    spec:
      containers:
      - name: access-gateway
        image: isl-dsdc.ca.com:5001/casso/access-gateway:14.00.00.0016
        imagePullPolicy: IfNotPresent
        ports:
        # Access Gateway ports
        -  containerPort: 7080
        -  containerPort: 7443
        -  containerPort: 6080
        -  containerPort: 6443
        volumeMounts:
        - name: ag-worker-config
          mountPath: /configuration
        - name: access-gateway-logs
          mountPath: /opt/CA/secure-proxy/proxy-engine/logs
      - name: access-gateway-server-log
        image: isl-dsdc.ca.com:5001/casso/log-collector:01.00.01.1000
        imagePullPolicy: IfNotPresent
        args: [/bin/bash, -c, 'tail -n+1 -F /opt/CA/secure-proxy/proxy-engine/logs/server.log']
        volumeMounts:
        - name: access-gateway-logs
          mountPath: /opt/CA/secure-proxy/proxy-engine/logs
      - name: access-gateway-sps-log
        image: isl-dsdc.ca.com:5001/casso/log-collector:01.00.01.1000
        imagePullPolicy: IfNotPresent
        args: [/bin/bash, -c, 'tail -n+1 -F /opt/CA/secure-proxy/proxy-engine/logs/sps.log']
        volumeMounts:
        - name: access-gateway-logs
          mountPath: /opt/CA/secure-proxy/proxy-engine/logs
      imagePullSecrets:
      - name: jolly-tuatara-casso-registry-key
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: ag-worker-config
        emptyDir: {}
      - name: access-gateway-logs
        emptyDir: {}
---
# Source: casso/templates/deployment-ps-worker.yaml
## Worker Policy Server Deployment (includes Policy Server Worker container in the pod)
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: jolly-tuatara-casso-ps-worker
  namespace: prod
  labels:
    # The "heritage" label is used to track which tool deployed a given chart.
    # It is useful for admins who want to see what releases a particular tool
    # is responsible for.
    heritage: Tiller
    # The "release" convention makes it easy to tie a release to all of the
    # Kubernetes resources that were created as part of that release.
    release: jolly-tuatara
    # This makes it easy to audit chart usage.
    chart: casso-14.00.00
    app: jolly-tuatara-casso
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jolly-tuatara-casso
      release: jolly-tuatara
      ca.com/sso-pod: policy-server
      ca.com/sso-role: worker
  template:
    metadata:
      labels:
        app: jolly-tuatara-casso
        release: jolly-tuatara
        ca.com/sso-pod: policy-server
        ca.com/sso-role: worker
    spec:
      containers:
      - name: policy-server
        image: isl-dsdc.ca.com:5001/casso/policy-server:14.00.00.0016
        imagePullPolicy: IfNotPresent
        ports:
        # Accounting port
        - containerPort: 44441
        # Authentication port
        - containerPort: 44442
        # Authorization port
        - containerPort: 44443
        livenessProbe:
          tcpSocket:
            port: 44443
          initialDelaySeconds: 120
          timeoutSeconds: 5
          failureThreshold: 6
          periodSeconds: 5
        readinessProbe:
          tcpSocket:
            port: 44443
          initialDelaySeconds: 30
          periodSeconds: 5
        lifecycle:
          preStop:
            exec:
              # SIGTERM triggers a quick exit; gracefully terminate instead
              command: ["/usr/bin/bash", "-c", "${PS_HOME}/stop-all"]
        volumeMounts:
        - name: ps-worker-config
          mountPath: /configuration
        - name: policy-server-logs
          mountPath: /opt/CA/siteminder/log
      - name: policy-server-log
        image: isl-dsdc.ca.com:5001/casso/log-collector:01.00.01.1000
        imagePullPolicy: IfNotPresent
        args: [/bin/bash, -c, 'tail -n+1 -F /opt/CA/siteminder/log/smps.log']
        volumeMounts:
        - name: policy-server-logs
          mountPath: /opt/CA/siteminder/log
      imagePullSecrets:
      - name: jolly-tuatara-casso-registry-key
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: ps-worker-config
        emptyDir: {}
      - name: policy-server-logs
        emptyDir: {}
---
# Source: casso/templates/statefulset-admin.yaml
kind: StatefulSet
apiVersion: apps/v1beta1
metadata:
  name: jolly-tuatara-casso-admin
  namespace: prod
  labels:
    # The "heritage" label is used to track which tool deployed a given chart.
    # It is useful for admins who want to see what releases a particular tool
    # is responsible for.
    heritage: Tiller
    # The "release" convention makes it easy to tie a release to all of the
    # Kubernetes resources that were created as part of that release.
    release: jolly-tuatara
    # This makes it easy to audit chart usage.
    chart: casso-14.00.00
    app: jolly-tuatara-casso
spec:
  serviceName: jolly-tuatara-casso-admin-headless
  replicas: 1
  selector:
    matchLabels:
      app: jolly-tuatara-casso
      release: jolly-tuatara
      ca.com/sso-pod: admin
      ca.com/sso-role: admin
  template:
    metadata:
      labels:
        app: jolly-tuatara-casso
        release: jolly-tuatara
        ca.com/sso-pod: admin
        ca.com/sso-role: admin
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: policy-server
        image: isl-dsdc.ca.com:5001/casso/policy-server:14.00.00.0016
        imagePullPolicy: IfNotPresent
        ports:
        # Accounting port
        - containerPort: 44441
        # Authentication port
        - containerPort: 44442
        # Authorization port
        - containerPort: 44443
        readinessProbe:
          tcpSocket:
            port: 44443
          initialDelaySeconds: 30
          periodSeconds: 5
        lifecycle:
          preStop:
            exec:
              # SIGTERM triggers a quick exit; gracefully terminate instead
              command: ["/usr/bin/bash", "-c", "${PS_HOME}/stop-all"]
        volumeMounts:
        - name: admin-config
          mountPath: /configuration
        - name: policy-server-logs
          mountPath: /opt/CA/siteminder/log
        - name: policy-server-interprocess-communication
          mountPath: "/tmp"
      - name: admin-ui
        image: isl-dsdc.ca.com:5001/casso/admin-ui:14.00.00.0016
        imagePullPolicy: IfNotPresent
        ports:
        # Admin UI ports
        -  containerPort: 8080
        -  containerPort: 8443
        readinessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 40
          timeoutSeconds: 3
          periodSeconds: 5
        volumeMounts:
        - name: admin-config
          mountPath: /configuration
      - name: policy-store
        image: isl-dsdc.ca.com:5001/casso/policy-store:14.00.00.0011
        imagePullPolicy: IfNotPresent
        ports:
        # LDAP DSA port
        - containerPort: 10389
        # SSH port
        - containerPort: 222
        livenessProbe:
          tcpSocket:
            port: 10389
          initialDelaySeconds: 30
          timeoutSeconds: 5
          failureThreshold: 6
        readinessProbe:
          tcpSocket:
            port: 10389
          initialDelaySeconds: 10
          timeoutSeconds: 3
          periodSeconds: 5
        lifecycle:
          preStop:
            exec:
              command:
              - bash
              - "-c"
              - |
                [...]
        volumeMounts:
        - name: admin-config
          mountPath: /configuration
        - name: policy-store-ldif
          mountPath: /configuration/policy-store/data
        - name: policy-store-data
          mountPath: /opt/CA/Directory/dxserver/data
        - name: policy-store-config-knowledge
          mountPath: /opt/CA/Directory/dxserver/config/knowledge
        - name: policy-store-config-servers
          mountPath: /opt/CA/Directory/dxserver/config/servers
        - name: policy-store-config-logging
          mountPath: /opt/CA/Directory/dxserver/config/logging
        - name: policy-store-config-map
          mountPath: /mnt/policy-store-config-map
        - name: policy-store-logs
          mountPath: /opt/CA/Directory/dxserver/logs
        - name: policy-server-interprocess-communication
          mountPath: "/tmp"
      - name: access-gateway
        image: isl-dsdc.ca.com:5001/casso/access-gateway:14.00.00.0016
        imagePullPolicy: IfNotPresent
        ports:
        # Access Gateway ports
        -  containerPort: 9080
        -  containerPort: 9443
        volumeMounts:
        - name: admin-config
          mountPath: /configuration
        - name: access-gateway-logs
          mountPath: /opt/CA/secure-proxy/proxy-engine/logs
      - name: policy-server-log
        image: isl-dsdc.ca.com:5001/casso/log-collector:01.00.01.1000
        imagePullPolicy: IfNotPresent
        args: [/bin/bash, -c, 'tail -n+1 -F /opt/CA/siteminder/log/smps.log']
        volumeMounts:
        - name: policy-server-logs
          mountPath: /opt/CA/siteminder/log
      - name: access-gateway-proxyui-log
        image: isl-dsdc.ca.com:5001/casso/log-collector:01.00.01.1000
        imagePullPolicy: IfNotPresent
        args: [/bin/bash, -c, 'tail -n+1 -F /opt/CA/secure-proxy/proxy-engine/logs/proxyui.log']
        volumeMounts:
        - name: access-gateway-logs
          mountPath: /opt/CA/secure-proxy/proxy-engine/logs
      - name: access-gateway-server-log
        image: isl-dsdc.ca.com:5001/casso/log-collector:01.00.01.1000
        imagePullPolicy: IfNotPresent
        args: [/bin/bash, -c, 'tail -n+1 -F /opt/CA/secure-proxy/proxy-engine/logs/server.log']
        volumeMounts:
        - name: access-gateway-logs
          mountPath: /opt/CA/secure-proxy/proxy-engine/logs
      - name: access-gateway-sps-log
        image: isl-dsdc.ca.com:5001/casso/log-collector:01.00.01.1000
        imagePullPolicy: IfNotPresent
        args: [/bin/bash, -c, 'tail -n+1 -F /opt/CA/secure-proxy/proxy-engine/logs/sps.log']
        volumeMounts:
        - name: access-gateway-logs
          mountPath: /opt/CA/secure-proxy/proxy-engine/logs
      - name: policy-store-alarm-log
        image: isl-dsdc.ca.com:5001/casso/log-collector:01.00.01.1000
        imagePullPolicy: IfNotPresent
        args: [/bin/bash, -c, 'tail -n+1 -F /opt/CA/Directory/dxserver/logs/*_alarm.log']
        volumeMounts:
        - name: policy-store-logs
          mountPath: /opt/CA/Directory/dxserver/logs
      - name: policy-store-trace-log
        image: isl-dsdc.ca.com:5001/casso/log-collector:01.00.01.1000
        imagePullPolicy: IfNotPresent
        args: [/bin/bash, -c, 'tail -n+1 -F /opt/CA/Directory/dxserver/logs/*_trace.log']
        volumeMounts:
        - name: policy-store-logs
          mountPath: /opt/CA/Directory/dxserver/logs
      - name: policy-store-alert-log
        image: isl-dsdc.ca.com:5001/casso/log-collector:01.00.01.1000
        imagePullPolicy: IfNotPresent
        args: [/bin/bash, -c, 'tail -n+1 -F /opt/CA/Directory/dxserver/logs/*_alert.log']
        volumeMounts:
        - name: policy-store-logs
          mountPath: /opt/CA/Directory/dxserver/logs
      - name: policy-store-warn-log
        image: isl-dsdc.ca.com:5001/casso/log-collector:01.00.01.1000
        imagePullPolicy: IfNotPresent
        args: [/bin/bash, -c, 'tail -n+1 -F /opt/CA/Directory/dxserver/logs/*_warn.log']
        volumeMounts:
        - name: policy-store-logs
          mountPath: /opt/CA/Directory/dxserver/logs
      - name: policy-store-stats-log
        image: isl-dsdc.ca.com:5001/casso/log-collector:01.00.01.1000
        imagePullPolicy: IfNotPresent
        args: [/bin/bash, -c, 'tail -n+1 -F /opt/CA/Directory/dxserver/logs/*_stats.log']
        volumeMounts:
        - name: policy-store-logs
          mountPath: /opt/CA/Directory/dxserver/logs
      - name: policy-store-diag-log
        image: isl-dsdc.ca.com:5001/casso/log-collector:01.00.01.1000
        imagePullPolicy: IfNotPresent
        args: [/bin/bash, -c, 'tail -n+1 -F /opt/CA/Directory/dxserver/logs/*_diag.log']
        volumeMounts:
        - name: policy-store-logs
          mountPath: /opt/CA/Directory/dxserver/logs
      - name: policy-store-summary-log
        image: isl-dsdc.ca.com:5001/casso/log-collector:01.00.01.1000
        imagePullPolicy: IfNotPresent
        args: [/bin/bash, -c, 'tail -n+1 -F /opt/CA/Directory/dxserver/logs/*_summary.log']
        volumeMounts:
        - name: policy-store-logs
          mountPath: /opt/CA/Directory/dxserver/logs
      imagePullSecrets:
      - name: jolly-tuatara-casso-registry-key
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: admin-config
        emptyDir: {}
      - name: policy-server-logs
        emptyDir: {}
      - name: policy-server-interprocess-communication
        emptyDir: {}
      - name: policy-store-logs
        emptyDir: {}
      - name: access-gateway-logs
        emptyDir: {}
      - name: policy-store-ldif
        emptyDir: {}
      - name: policy-store-config-knowledge
        emptyDir: {}
      - name: policy-store-config-servers
        emptyDir: {}
      - name: policy-store-config-logging
        emptyDir: {}
      - name: policy-store-config-map
        configMap:
          name: jolly-tuatara-casso-policy-store
      - name: policy-store-data
        emptyDir: {}
---
# Source: casso/templates/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: jolly-tuatara-casso
  namespace: prod
  labels:
    # The "heritage" label is used to track which tool deployed a given chart.
    # It is useful for an admin who wants to see what releases a particular tool
    # is responsible for.
    heritage: Tiller
    # The "release" convention makes it easy to tie a release to all of the
    # Kubernetes resources that were created as part of that release
    release: jolly-tuatara
    # This makes it easy to audit chart usage.
    chart: casso-14.00.00
    app: jolly-tuatara-casso
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: cassonone.ca.local
    http:
      paths:
        # Default base url to Admin UI
        - path: /
          backend:
            serviceName: jolly-tuatara-casso-admin
            servicePort: 8080
        - path: /adminui
          backend:
            serviceName: jolly-tuatara-casso-admin
            servicePort: 8080
        - path: /iam/siteminder/console
          backend:
            serviceName: jolly-tuatara-casso-admin
            servicePort: 8080
        - path: /castylesr5.1.1/
          backend:
            serviceName: jolly-tuatara-casso-admin
            servicePort: 8080
        - path: /proxyui
          backend:
            serviceName: jolly-tuatara-casso-admin
            servicePort: 9080
        - path: /castylesr5.1.3/
          backend:
            serviceName: jolly-tuatara-casso-admin
            servicePort: 9080
